Some native image support
but it still doesn't work because of JNR